# django-template

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  mypy.ini  pyproject.hatch.toml  pyproject.toml  requirements.txt  ruff.toml  tailwind.md
apps/accounts/: admin.py  managers.py  models.py  views.py
apps/accounts/api/: views.py
apps/accounts/migrations/: 0001_initial.py
apps/home/: forms.py  sitemaps.py  urls.py  views.py
apps/home/templates/home/: _layout.html  index.html  login.html
changeme/: urls.py
changeme/settings/: base.py  local.example.py  prod.py
dj_tools/: storage.py
static/css/: custom.css
