[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["nuxion <nuxion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
gunicorn = "^22.0.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
django-browser-reload = "^1.13.0"
django-stubs = "^5.0.2"
ipython = "^8.25.0"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
django-debug-toolbar = "^4.4.2"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.ruff]
# Set the maximum line length to 79.
# line-length = 88
