[project]
name = "django-template"
version = "0.1.0"
description = ""
authors = [{name = "nuxion", email = "nuxion@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0.6,<6",
    "gunicorn>=22.0.0,<23",
    "whitenoise[brotli]>=6.7.0,<7",
]

[dependency-groups]
dev = [
    "ruff>=0.4.10",
    "django-browser-reload>=1.13.0",
    "django-stubs>=5.0.2",
    "ipython>=8.25.0",
    "pytest>=8.2.2",
    "pytest-django>=4.8.0",
    "django-debug-toolbar>=4.4.2",
    "djlint>=1.34.1",
]

# [tool.ruff]
# Set the maximum line length to 79.
# line-length = 88
